feat: move to site folder for clarity

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Framer RSS Feeds</title>
 	<meta name="description" content="Generate RSS Feeds for your Framer Site.">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -28,8 +28,8 @@
 		<ol>
 			<li>In your Framer project, add the id <code>rss</code> to your <b>Collection List</b> component.
 				<div class="grid">
-					<img src="public/collection-list.png" alt="Collection List component">
-					<img src="public/id.png" alt="How to add an id">
+					<img src="collection-list.png" alt="Collection List component">
+					<img src="id.png" alt="How to add an id">
 				</div>
 			</li>
 			<li>Deploy your site</li>
